<resources>
    <string name="app_name">Practice</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_input">InputActivity</string>

    <string name="button">버튼</string>
    <string name="confirm">확인</string>
    <string name="name">이름</string>
    <string name="male">남자</string>
    <string name="female">여자</string>
    <string name="agreement">동의</string>
    <string name="birthday">생년월일</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="profile">프로필</string>
</resources>
